kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-app
